- Adjusted navigation: -- No subnavigation anymore (not neccessary and just grabs too much space) -- Seperated: Logbook, Seamap, Regatta - Modified paging buttons to have icons instead of text - Repositioned the add waypoint button - Adjusted some css styles

--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -177,12 +177,14 @@
 							<div class="listview-buttons tablePager">
 								<div class="span6">
 									<div class="left">
-										<input type="button" class="btn prevPage" value="Previous"/>
+										<input type="button" class="btn prevPage" style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
+										<a class="btn prevPage" href="#"><i class="icon-arrow-left"></i></a>
 									</div>
 								</div>
 								<div class="span6">
-									<div class="right ">
-										<input type="button" class="btn nextPage" value="Next"/>
+									<div class="right">
+										<input type="button" class="btn nextPage"style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
+										<a class="btn nextPage" href="#"><i class="icon-arrow-right"></i></a>
 									</div>
 								</div>
 							</div>
