- Fixed bug that the non interactive routes/log_entries were not displayed on the maps - Added notification for log_entry.scala.html when the map can not be displayed

--- a/app/de/htwg/seapal/web/views/content/log_entry.scala.html
+++ b/app/de/htwg/seapal/web/views/content/log_entry.scala.html
@@ -76,7 +76,7 @@
 								<input type="number" name="dtm" tabindex="11" min="0" step="0.1" />
 							</div>
 							<div class="span4 offset2">
-								@helper.select(myForm("headedFor"), helper.options(DropdownContent.getHeadedForOptions))
+								@helper.select(myForm("HeadedFor"), helper.options(DropdownContent.getHeadedForOptions))
 							</div>
 						</div>
 						<div class="row">
@@ -104,9 +104,17 @@
 								</div>
 							</div>
 							<div class="span6">
+							@if(waypointId != null) {
 								<div class="round">
 									<div id="mini_map"></div>
 								</div>
+							} else {
+								<div class="alert alert-info">
+									  <button type="button" class="close" data-dismiss="alert">&times;</button>
+									  <h4>Please note:</h4>
+									  You have to save the log entry before you can see the marker on the map.
+								</div>
+							}
 							</div>
 							<div class="span3">
 								<div class="round">
