--- a/app/de/htwg/seapal/web/views/content/trip_list.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_list.scala.html
@@ -8,46 +8,43 @@
 }
 
 @main("Seapal - Trip List", scripts, "withsubnavi") {
-			<div class="container">
-					<div class="row">
-						<div class="span8">
-							<div class="left">
-								<h1>Trip List @if(boatId == null){ of all Boats }</h1>
-							</div>
-						</div>
-						<div class="span4">
-							@if(boatId != null){
-								<div class="right buttons_top">
-									<a id="addButton" href="@de.htwg.seapal.web.controllers.routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Add<span></a>
-								</div>
-							}
-						</div>
+	<div class="container">
+			<div class="row">
+				<div class="span8">
+					<div class="left">
+						<h1>Trip List</h1>
 					</div>
-					<input type="hidden" id="boatId" value="@boatId" />
-					<form action="@de.htwg.seapal.web.controllers.routes.Application.regatta_add" method="post">
-					
-					<div class="listview-wrapper">
-						<div class="listview">
-							<div class="row">
-								<div class="span12">
-									
-									<table id="tripListTable" class="table table-striped table-bordered table-hover">
-										<thead>
-									        <tr>
-									        	<th></th>
-									        	<th>Title</th>
-									        	<th>Start Location</th>
-									        	<th>End Location</th>
-									        	<th>Date</th>
-									        	<th class="actionCol">Activities</th>
-									        </tr>
-									    </thead>
-									    <tbody>
-									    </tbody>
-									</table>
-									<script id="tripListTemplate" type="text/x-jsrender">
+				</div>
+				<div class="span4">
+					<div class="right buttons_top">
+						<a id="addButton" href="@de.htwg.seapal.web.controllers.routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Add<span></a>
+					</div>
+				</div>
+			</div>
+			<input type="hidden" id="boatId" value="@boatId" />
+			<form action="@de.htwg.seapal.web.controllers.routes.Application.regatta_add" method="post">
+			
+			<div class="listview-wrapper">
+				<div class="listview">
+					<div class="row">
+						<div class="span12">
+							
+							<table id="tripListTable" class="table table-striped table-bordered table-hover">
+								<thead>
+							        <tr>
+							        	<th></th>
+							        	<th>Title</th>
+							        	<th>Start Location</th>
+							        	<th>End Location</th>
+							        	<th>Date</th>
+							        	<th class="actionCol">Activities</th>
+							        </tr>
+							    </thead>
+							    <tbody>
+							    </tbody>
+							</table>
+							<script id="tripListTemplate" type="text/x-jsrender">
 										<tr data-id="{{>_id}}">
-											<td><input type="checkbox" name="tripId[]" value="{{>_id}}"></td>
 											<td>{{>name}}</td>
 											<td>{{>startLocation}}</td>
 											<td>{{>endLocation}}</td>
@@ -58,37 +55,28 @@
 											</td>
 										</tr>
 									</script>
-								</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="listview-buttons tablePager">
+						<div class="span6">
+							<div class="left">
+								<input type="button" class="btn prevPage" style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
+								<a class="btn prevPage" href="#"><i class="icon-arrow-left"></i></a>
 							</div>
 						</div>
-						<div class="row">
-							<div class="listview-buttons tablePager">
-								<div class="span12">
-									<div class="left">
-										<input type="submit" class="btn" value="Trips > Regatta View"/>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="listview-buttons tablePager">
-								<div class="span6">
-									<div class="left">
-										<input type="button" class="btn prevPage" style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
-										<a class="btn prevPage" href="#"><i class="icon-arrow-left"></i></a>
-									</div>
-								</div>
-								<div class="span6">
-									<div class="right ">
-										<input type="button" class="btn nextPage" style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
-										<a class="btn nextPage" href="#"><i class="icon-arrow-right"></i></a>
-									</div>
-								</div>
+						<div class="span6">
+							<div class="right ">
+								<input type="button" class="btn nextPage" style="display:none"/> <!-- needed that the bootstrap css rule applies  -->
+								<a class="btn nextPage" href="#"><i class="icon-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
-					</form>
 				</div>
+			</div>
+			</form>
+		</div>
 		<!-- modals -->
 		<div id="deletePromptModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deletePromptModalLabel" aria-hidden="true">
 		  <div class="modal-header">
