Adjusted styles for links and mailto on contact page

--- a/app/de/htwg/seapal/web/views/content/contact.scala.html
+++ b/app/de/htwg/seapal/web/views/content/contact.scala.html
@@ -10,8 +10,8 @@
 					78315 Radolfzell<br />
 					Germany</p>
 
-					<p>www.ibn-online.de<br />
-					ibn at ibn-online.de</p>
+					<p><a class="boldlink" href="www.ibn-online.de">www.ibn-online.de</a><br />
+					<a class="boldlink" href="mailto:ibn@@ibn-online.de?Subject=Seapal">ibn@@ibn-online.de</a></p>
 				</div>
 			</div>
 			<div class="span6">
@@ -24,8 +24,8 @@
 					78462 Konstanz<br />
 					Germany</p>
 
-					<p>www.htwg-konstanz.de<br />
-					marko.boger at htwg-konstanz.de</p>
+					<p><a class="boldlink" href="www.htwg-konstanz.de">www.htwg-konstanz.de</a><br />
+					<a class="boldlink" href="mailto:marko.boger@@htwg-konstanz.de?Subject=Seapal">marko.boger@@htwg-konstanz.de</a></p>
 				</div>
 			</div>
 		</div><!-- row end -->
