- Removed regatta pages - Resettet Trip List to display just the trips of a boat (and without checkboxes in the table) - Added Pages for the basic flow for creating a new Race

--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -28,7 +28,7 @@
 					<div class="input-wrapper" id="boat_input">
 						<div class="row">
 							<div class="span4">
-								<label for="boatName">Boat Name</label> 
+								<label for="boatName">Name</label> 
 								<input type="text" name="boatName" tabindex="1" required />
 							</div>
 							<div class="span4">
