--- a/app/de/htwg/seapal/web/views/navbar.scala.html
+++ b/app/de/htwg/seapal/web/views/navbar.scala.html
@@ -33,9 +33,9 @@
 					      </a>
 					    <ul class="dropdown-menu">
 					      <li>
-					      	<a href="/boat_info">Logbook</a>
-					      	<a href="/seamap">Seamap</a>
-					      	<a href="/boat_info">Regatta</a>
+					      	<a href="@de.htwg.seapal.web.controllers.routes.Application.boat_info()">Logbook</a>
+					      	<a href="@de.htwg.seapal.web.controllers.routes.Application.seamap()">Seamap</a>
+					      	<a href="@de.htwg.seapal.web.controllers.routes.Application.race_list()">Regatta</a>
 					      </li>
 					    </ul>
 					  </li>
