- implemeted the use of the mock database and the model classes for races - Added functinalitiy to delete races - Removed actions of the trips in race_info page - Adjusted Guice module descriptions to use the mock database

--- a/app/de/htwg/seapal/web/views/content/race_list.scala.html
+++ b/app/de/htwg/seapal/web/views/content/race_list.scala.html
@@ -37,7 +37,7 @@
 						    </tbody>
 						</table>
 						<script id="raceListTemplate" type="text/x-jsrender">
-							<tr data-id="{{>_id}}">
+							<tr data-id="{{>id}}">
 								<td>{{>name}}</td>
 								<td>{{>boatClass}}</td>
 								<td>{{>links[0].href}}</td>
