--- a/app/de/htwg/seapal/web/views/content/racemap.scala.html
+++ b/app/de/htwg/seapal/web/views/content/racemap.scala.html
@@ -4,9 +4,9 @@
 	<script type="text/javascript" src="@de.htwg.seapal.web.controllers.routes.Application.javascriptRoutes"></script>
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/label.js")"></script>
-	<script type="text/javascript" src="@routes.Assets.at("lib/seamap/seamap-1.0.1.js")"></script>
-	<script type="text/javascript" src="@routes.Assets.at("js/seapal_main.min.js")"></script>
-	<link type="text/css" rel="stylesheet" href="@routes.Assets.at("css/seamap.css")" />
+	<script type="text/javascript" src="@routes.Assets.at("lib/racemap/racemap-1.0.0.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/racemap.min.js")"></script>
+	<link type="text/css" rel="stylesheet" href="@routes.Assets.at("css/racemap.css")" />
 }
 
 @main("SeaPal - Racemap", scripts, bodyClass = "withsubnavi googlemaps", contentClass = "container-fluid") {
