--- a/public/css/seamap.css
+++ b/public/css/seamap.css
@@ -5,10 +5,19 @@ body.googlemaps
 {
 	overflow:hidden;
 }
+@media (max-width: 767px)
+
 #map_canvas
 {
 	height:100%;
 	margin: 0px;
+}
+
+.container-fluid {
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-top: -21px;
+	margin-bottom: -20px;
 }
 
 /**
