Updated RaceAPI to get all race/trip/boat/waypoint data, but without controlPoints and markPassings

--- a/app/de/htwg/seapal/web/views/content/race_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/race_info.scala.html
@@ -6,7 +6,7 @@
 }
 
 @main("Seapal - Race Info", scripts, "withsubnavi") {
-	@helper.form(action = de.htwg.seapal.web.controllers.routes.Application.racemap_add() , 'id -> "form") {
+	@helper.form(action = de.htwg.seapal.web.controllers.routes.RaceAPI.raceDataByTripIds() , 'id -> "form") {
 		<div class="container">
 			<div class="row">
 				<div class="span8">
