--- a/app/de/htwg/seapal/web/views/content/race_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/race_info.scala.html
@@ -51,7 +51,7 @@
 							</table>
 							<script id="tripListTemplate" type="text/x-jsrender">
 										<tr data-id="{{>_id}}">
-											<td><input type="checkbox" name="tripId[]" value="{{>_id}}"></td>
+											<td><input type="checkbox" name="tripIds[]" value="{{>_id}}"></td>
 											<td>{{>name}}</td>
 											<td>{{>startLocation}}</td>
 											<td>{{>endLocation}}</td>
