- Fixed BUG for seamap-1.0.1.js and racemap-1.0.0.js, that a route must not be clicked twice for selection, when another route is currently selected - Fixed WEB APP navbar to be fixed on the right side

--- a/app/de/htwg/seapal/web/views/navbar.scala.html
+++ b/app/de/htwg/seapal/web/views/navbar.scala.html
@@ -23,12 +23,12 @@
 				    	@display(menuItem)
 				    }
 					</ul>
-					<ul class="nav">
+					<ul class="nav pull-right">
 					  <li class="dropdown">
 					    <a class="dropdown-toggle"
 					       data-toggle="dropdown"
 					       href="#">
-					        <strong>Web App</strong>
+					        <strong>Seapal Web App</strong>
 					        <b class="caret"></b>
 					      </a>
 					    <ul class="dropdown-menu">
