- implemented logic to define a start and a goal line - extended sidebar to show boat information for each trip/route - fixed BUGs for the context-menu in seamap-1.0.1.js and racemap-1.0.0.js, that the context menu will be closed after left-clicking another element.

--- a/public/css/racemap.css
+++ b/public/css/racemap.css
@@ -93,6 +93,7 @@ body.googlemaps
 	padding:6px;
 	margin-top:-2px;
 	vertical-align: middle;
+	overflow: hidden;
 }
 
 .racemapsidebar div.buttons_bottom {
